progress on this nightmare of a mobile zoom bug. Coords and all other relevant threejs params on mobile are now scaled and unscaled to [-1,1] using a d3 linear scale. Resolution yet to be defined dynamically though

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
     left: 0px!important;
     padding:5px!important;
     background:#efefefe8;
+    max-width: 100% !important;
   }
   .gridviz-headings-container {
     z-index:999999;
